# rl-environments

./: README.md
blaise-envs/docs/: crun-integration.md
blaise-envs/environments/deepdive/: README.md  pyproject.toml
blaise-envs/environments/deepdive/deepdive/: deepdive.py  open_one.py  rate_limit.py
blaise-envs/environments/ifbench/: README.md  pyproject.toml
blaise-envs/environments/ifbench/ifbench/: __init__.py  ifbench.py
blaise-envs/environments/ifbench/ifbench/utils/: __init__.py  eval.py  instructions.py  registry.py  utils.py
blaise-envs/environments/multi_swe/: README.md  multi_swe.py  pyproject.toml
blaise-envs/environments/multi_swe/scripts/: warm_images.py
blaise-envs/environments/swe_bench/: README.md  pyproject.toml  swebench.yaml
blaise-envs/environments/swe_bench/swe_bench/: __init__.py  swe_bench.py
blaise-envs/environments/tau_2_bench/: README.md  pyproject.toml  tau_2_bench.py
blaise-envs/environments/terminal_bench/: README.md  pyproject.toml
blaise-envs/environments/terminal_bench/terminal_bench/: __init__.py  terminal_bench.py
blaise-envs/environments/terminal_bench/terminal_bench/utils/: __init__.py  docker_executor.py
environments/: multi_swe  tool_decathlon
experiments/: README.md
experiments/environments/: self_improve
experiments/multi-swe/environments/multi_swe/: multi_swe.py  pyproject.toml
experiments/self-improvement/: pseudo.py
experiments/self-improvement/context/: pdf_to_md.py
experiments/self-improvement/environments/self_improve/: self_improve.py
experiments/tool-decathlon/: README.md
experiments/tool-decathlon/data/: tool_decathlon_dataset_no_creds.json  tool_decathlon_tasks.json
experiments/tool-decathlon/data/tool_decathlon_dataset/: data-00000-of-00001.arrow  state.json
experiments/tool-decathlon/data/tool_decathlon_dataset_minimal/: data-00000-of-00001.arrow
experiments/tool-decathlon/data/tool_decathlon_dataset_no_creds/: data-00000-of-00001.arrow
experiments/tool-decathlon/environments/tool_decathlon/: pyproject.toml  tool_decathlon.py
experiments/tool-decathlon/scripts/: build_toolathlon_image.sh  create_hf_dataset.py  deploy_services.sh  diagnose_mcps.sh  setup_credentials.sh  test_with_logs.sh
experiments/tool-decathlon/toolathlon-server/: Dockerfile.sandbox  EVAL_SERVICE_README.md  task_api.py
experiments/tool-decathlon/toolathlon-server/tasks/finalpool/canvas-do-quiz/evaluation/: check_remote.py
experiments/tool-decathlon/toolathlon-server/tasks/finalpool/excel-data-transformation/initial_workspace/: Household_Appliances.xlsx
experiments/tool-decathlon/toolathlon-server/tasks/finalpool/experiments-recordings/evaluation/: main.py
multi-swe/environments/multi_swe/: README.md  multi_swe.py  pyproject.toml
multi-swe/environments/multi_swe/scripts/: warm_images.py
self-improvement/: README.md
self-improvement/context/: 2509.04575v1 (2).md
self-improvement/environments/self_improve/: README.md  pyproject.toml
tool-decathlon/: ARCHITECTURE.md  ASYNC_FIX.md  COMPLETE_SETUP_GUIDE.md  FULL_PARITY_ACHIEVED.md  IMPLEMENTATION_SUMMARY.md  MISSING_LOCAL_TOOLS.md  NO_CREDENTIALS_TASKS.md  PRODUCTION_SETUP.md  QUICK_TEST.md  README.md  SETUP.md  STATUS_CHECK.md  TESTING_INSTRUCTIONS.md  VALIDATION.md  mcp_test_results.json  pytest.ini
tool-decathlon/data/: tool_decathlon_tasks.json
tool-decathlon/data/tool_decathlon_dataset/: cache-226c3f0c34a4f030.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
tool-decathlon/data/tool_decathlon_dataset_minimal/: state.json
tool-decathlon/data/tool_decathlon_dataset_no_creds/: dataset_info.json  state.json
tool-decathlon/docker/: task_api.py
tool-decathlon/environments/tool_decathlon/: README.md  pyproject.toml  tool_decathlon.py
tool-decathlon/scripts/: build_toolathlon_image.sh  debug_runtime.sh  monitor_container.sh  setup_docker_mac.sh  test_mcp_servers.py  test_no_creds.sh
tool-decathlon/tests/: conftest.py  test_tool_decathlon.py
toolathon/environments/toolathon_env/: README.md  pyproject.toml
