[project]
name = "deepdive"
version = "0.1.0"
description = "DeepDive QA RL environment with Serper-powered search tools and Gemini judge"
tags = ["rl", "search", "qa", "multi-turn", "tool-use"]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.0",
    "datasets>=4.0.0",
    "diskcache>=5.6.0",
    "pdfminer-six>=20251107",
    "trafilatura>=2.0.0",
    "verifiers>=0.1.8",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["deepdive/"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
