[project]
name = "ifbench"
description = "IFBench: Verifiable instruction following benchmark environment for RLVR training"
tags = ["instruction-following", "verifiable", "ifeval", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets>=2.14.0",
    "nltk>=3.8.0",
    "emoji>=2.0.0",
    "syllapy>=0.7.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ifbench/"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
