[project]
name = "terminal-bench"
description = "Terminal-Bench Pro environment for evaluating LLM agents on terminal/command-line tasks across 8 domains"
tags = ["terminal", "command-line", "bash", "tool-use", "multi-turn", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets>=2.0.0",
    "huggingface-hub>=0.20.0",
    "docker>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["terminal_bench"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
