[project]
name = "multi-swe"
description = "Multi-SWE RL Environment with OpenHands agent harness (Harbor sandbox)"
tags = ["multi-swe", "openhands", "train", "eval", "multilingual", "harbor"]
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.8",
    "harbor",
    "multi-swe-bench",
    "tenacity",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["multi_swe.py"]

[tool.uv.sources]
multi-swe-bench = {git = "https://github.com/multi-swe-bench/multi-swe-bench.git", rev = "e1c2bb6"}
