[project]
name = "self-improve"
description = "Minimal multi-turn self-improvement environment for iterative answer refinement"
tags = ["self-improvement", "multi-turn", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["self_improve.py"]
