[project]
name = "tool-decathlon"
description = "Tool Decathlon meta-environment for verifiers - wraps Toolathlon via prime-sandboxes"
tags = ["tool-use", "agents", "multi-turn", "train", "eval", "meta-learning"]
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.3.post0",
    "datasets>=4.4.1",
    "prime-sandboxes>=0.2.5",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "tool_decathlon.py",
]
